# string

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithms.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/string_/: string_.c  string_.h
libs/data_structures/string_/tasks/: IsOrderedWord.h  addLastWords.h  areWordLettersInString.h  deleteSameWordsAsLastWord.h  digitToStart.h  digitsToSpaces.h  equalWords.h  interchangeWords.h  isPoly.h  lastFirstWordStringToSecond.h  printWordBeforeFirstWordWithA.h  removeExtraSpaces.h  removeNonLetters.h  replace.h  reverse.h  reverseWord.h  wordsFromSameLetters.h
